overflow-y fixed

--- a/src/app/portfolio/home/home.component.css
+++ b/src/app/portfolio/home/home.component.css
@@ -3,10 +3,11 @@
     height:300px;
     border-radius: 22%;
     object-fit: cover;
-    
+
 }
 
 .home-intro{
+
     margin-top: 2.5rem !important;
 border-radius: 12px;
 box-shadow: 0 0 8px silver;    
@@ -19,8 +20,8 @@ justify-content: space-evenly;
 }
 
 
-.home-intro-img::before{
-    content: "Hi ,there     ";
+.home-intro-img:before{
+    content: "Hi ,there";
     text-align: center;
     height:20px;
     width:90px;
@@ -37,22 +38,26 @@ justify-content: space-evenly;
 
 }
 .home-intro-cont{
+    
     padding: 2rem;
    position: relative;
    top:-2.5rem; 
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
+    word-break: break-all;
+    word-wrap: break-word;
+    font-family:  Helvetica, sans-serif;
 }
 
 
 .home-intro-cont{
 color:#FFF;
 border-radius: 12px;
+font-size: 1rem;
 padding: 1.2rem;
 line-height: 1.5rem;
 background-color: var(--pri-bg);
-
 }
+
 
 .home-motto{
     text-align: center;
