--- a/src/app/portfolio/work/work.component.css
+++ b/src/app/portfolio/work/work.component.css
@@ -5,8 +5,7 @@
   
 
 
-  .my-work{
-  }
+
   .pro-name{
     width: 100%;
     display: block;
@@ -40,3 +39,5 @@
   .view-btn{
     color: var(--pri-bg);
   }
+
+ 
